--- a/src/index.html
+++ b/src/index.html
@@ -495,6 +495,7 @@
             <li>
               <a
                 href="https://www.facebook.com"
+                target="_blank"
                 class="footer__socials-link"
               >
                 <img
@@ -508,6 +509,7 @@
             <li>
               <a
                 href="https://www.instagram.com"
+                target="_blank"
                 class="footer__socials-link"
               >
                 <img
@@ -521,6 +523,7 @@
             <li>
               <a
                 href="https://x.com"
+                target="_blank"
                 class="footer__socials-link"
               >
                 <img
