Creative Bakery landing page

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,496 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="icon"
+      href="./images/logo-white.svg"
+      type="image/svg+xml"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar header__top-bar">
+            <a
+              class="top-bar__logo-link"
+              href="#"
+            >
+              <img
+                src="./images/logo.svg"
+                alt="Bakerylab logo"
+                class="top-bar__logo"
+              />
+            </a>
+
+            <div class="top-bar__menu">
+              <a
+                href="#menu"
+                class="icon icon--menu"
+              ></a>
+            </div>
+
+            <nav class="nav top-bar__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#blog"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="call-link text__button"
+                    href="tel:+380000000000"
+                  >
+                    Contact us
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="header__bottom">
+            <p class="header__slogan">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <div class="header__bg-content">
+              <h1 class="title header__title">Creative bakery</h1>
+              <img
+                src="./images/header-bg-cookie.png"
+                alt="photo of cookies"
+                class="header__photo"
+              />
+            </div>
+            <a
+              class="button header__button"
+              href="#"
+            >
+              Learn more
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- #region menu -->
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a
+            class="top-bar__logo-link"
+            href="#"
+          >
+            <img
+              src="./images/logo.svg"
+              alt="Bakerylab logo"
+              class="top-bar__logo"
+            />
+          </a>
+
+          <div class="top-bar__menu">
+            <a
+              href="#page"
+              class="icon icon--close"
+            ></a>
+          </div>
+        </div>
+        <div class="menu__bottom">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#products"
+                  class="nav__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about"
+                  class="nav__link"
+                >
+                  About us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#blog"
+                  class="nav__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="call-link text__button"
+                  href="tel:+380000000000"
+                >
+                  Contact us
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion menu -->
+
+    <section
+      class="products"
+      id="products"
+    >
+      <div class="container">
+        <div class="products__wrapper">
+          <div class="products__info">
+            <h1 class="section-title products__title">what we bake</h1>
+            <p class="products__description">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
+
+          <div class="product">
+            <img
+              class="product__photo"
+              src="./images/photo-product-01.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Cakes</h2>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+
+          <div class="product">
+            <img
+              class="product__photo"
+              src="./images/photo-product-06.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Cakes</h2>
+              <p class="product__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+
+          <div class="product product--3">
+            <img
+              class="product__photo"
+              src="./images/photo-product-05.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Donuts</h2>
+              <p class="product__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+
+          <div class="product product--4">
+            <img
+              class="product__photo"
+              src="./images/photo-product-04.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Donuts</h2>
+              <p class="product__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+
+          <div class="product">
+            <img
+              class="product__photo"
+              src="./images/photo-product-03.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Cakes</h2>
+              <p class="product__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+
+          <div class="product">
+            <img
+              class="product__photo"
+              src="./images/photo-product-02.png"
+              alt="Custom Cookie"
+            />
+            <div class="product__info">
+              <h2 class="product__title">Cookies</h2>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+            </div>
+            <a
+              class="product__button text__button"
+              href="#footer"
+            >
+              Order
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="about"
+      id="about"
+    >
+      <div class="container">
+        <div class="about__wrapper">
+          <h2 class="section-title about__title">Few words About us</h2>
+          <p class="about__description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+
+          <ul class="about__info">
+            <li>
+              <p class="about__amount">2015</p>
+              <h3 class="about__achievement">Foundation year</h3>
+            </li>
+            <li>
+              <p class="about__amount">23</p>
+              <h3 class="about__achievement">Stores</h3>
+            </li>
+            <li>
+              <p class="about__amount">155</p>
+              <h3 class="about__achievement">Companies</h3>
+            </li>
+            <li>
+              <p class="about__amount">10k+</p>
+              <h3 class="about__achievement">Clients</h3>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__menu">
+            <h2 class="footer__title">
+              <a
+                class="footer__logo-link"
+                href="#"
+              >
+                <img
+                  src="./images/logo-white.svg"
+                  alt="Bakerylab logo"
+                  class="footer__logo"
+                />
+              </a>
+            </h2>
+
+            <h3 class="footer__subtitle">Menu</h3>
+            <nav class="nav footer__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#blog"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#"
+                  >
+                    Terms & Privacy
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="footer__contact-info">
+            <h2 class="footer__title">Contact us</h2>
+            <div class="footer__phone-contacts">
+              <h3 class="footer__subtitle">Call us</h3>
+              <ul class="footer__numbers">
+                <li>
+                  <a
+                    class="footer__link"
+                    href="tel:(629) 555-0129"
+                  >
+                    (629) 555-0129
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__link"
+                    href="tel:(603) 555-0123"
+                  >
+                    (603) 555-0123
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__link"
+                    href="tel:(704) 555-0127"
+                  >
+                    (704) 555-0127
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__email-contacts">
+              <h3 class="footer__subtitle">Email us</h3>
+              <a
+                class="footer__link"
+                href="mailto:bakerlab@example.com"
+              >
+                bakerlab@example.com
+              </a>
+            </div>
+          </div>
+
+          <ul class="footer__social-links">
+            <li>
+              <a
+                class="icon footer__icon icon--facebook"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+            <li>
+              <a
+                class="icon footer__icon icon--instagram"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+            <li>
+              <a
+                class="icon footer__icon icon--twitter"
+                href="#"
+                target="_blank"
+              ></a>
+            </li>
+          </ul>
+
+          <p class="footer__copyright">© Bakerlab 2022</p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
