--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,569 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
+    <link
+      rel="icon"
+      href="/src/icons/Icon-cookie.svg"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/aos@next/dist/aos.css"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <div class="page__box">
+      <header class="header page__header">
+        <div class="top-bar top-bar--box-shadow header__top-bar">
+          <div class="top-bar__block">
+            <a
+              href="#"
+              class="top-bar__logo-link"
+            >
+              <img
+                src="/src/icons/Logo.svg"
+                alt="Bakerlab-logo"
+                class="top-bar__logo"
+              />
+            </a>
+            <img
+              src="/src/icons/theme-icon.png"
+              alt="theme-icon"
+              class="top-bar__theme-icon"
+            />
+          </div>
+          <div class="top-bar__container">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about-us"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#blog"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contact-us"
+                    class="nav__link nav__link--uppercase"
+                  >
+                    Contact us
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <a
+            href="#menu"
+            class="top-bar__menu-icon"
+          ></a>
+        </div>
+      </header>
+      <aside
+        class="menu page__menu"
+        id="menu"
+      >
+        <div class="top-bar menu__top-bar--size">
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="/src/icons/Logo.svg"
+              alt="Bakerlab-logo"
+              class="top-bar__logo"
+            />
+          </a>
+          <a
+            href="#"
+            class="top-bar__menu-icon top-bar__menu-icon-close"
+          ></a>
+        </div>
+        <nav class="nav menu__nav-centering">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#about-us"
+                class="nav__link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#blog"
+                class="nav__link"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#contact-us"
+                class="nav__link nav__link--uppercase"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+      <section class="cake page__cake">
+        <div class="wrapper">
+          <p class="cake__slogan">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="cake__title">Creative bakery</h1>
+          <div class="wrapper__box">
+            <div class="cake__background"></div>
+          </div>
+          <a
+            href="#about-us"
+            class="cake__more"
+          >
+            Learn more
+          </a>
+        </div>
+      </section>
+      <main class="main">
+        <section
+          class="products page__products"
+          id="products"
+        >
+          <div class="wrapper wrapper--no-justify">
+            <h2
+              class="products__title"
+              data-aos="fade-up"
+              data-aos-duration="800"
+            >
+              What we bake
+            </h2>
+            <p
+              class="products__slogan"
+              data-aos="fade-up"
+              data-aos-duration="800"
+            >
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+            <article
+              class="product-card product-card--1 main__product-card"
+              data-aos="fade-right"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-01.png"
+                alt="Oatmeal cookies"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Cakes</h3>
+              <p class="product-card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+            <article
+              class="product-card product-card--2 main__product-card"
+              data-aos="fade-left"
+              data-aos-delay="200"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-06.png"
+                alt="Chocolate biscuit"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Cakes</h3>
+              <p class="product-card__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+            <article
+              class="product-card product-card--3 main__product-card"
+              data-aos="fade-right"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-05.png"
+                alt="Light multi-layered croissant"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Donuts</h3>
+              <p class="product-card__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+            <article
+              class="product-card product-card--4 main__product-card"
+              data-aos="fade-left"
+              data-aos-delay="200"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-04.png"
+                alt="Croissant strewn with cinammon and almond “petals”"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Donuts</h3>
+              <p class="product-card__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+            <article
+              class="product-card product-card--5 main__product-card"
+              data-aos="fade-right"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-03.png"
+                alt="Chocolate salted caramel"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Cakes</h3>
+              <p class="product-card__description">
+                Chocolate salted caramel, Vanilla frutti pebbles in crunchy
+                dough
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+            <article
+              class="product-card product-card--6 main__product-card"
+              data-aos="fade-left"
+              data-aos-delay="200"
+              data-aos-duration="800"
+              data-aos-offset="300"
+            >
+              <img
+                src="/src/images/photo-product-02.png"
+                alt="Oatmeal cookies with golden raisins"
+                class="product-card__image"
+              />
+              <h3 class="product-card__name">Cookies</h3>
+              <p class="product-card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="product-card__button"
+              >
+                Order
+              </a>
+            </article>
+          </div>
+        </section>
+        <section
+          class="about-us page__about-us"
+          id="about-us"
+        >
+          <div class="wrapper wrapper--no-justify">
+            <div class="about-us__block">
+              <h2
+                class="about-us__title"
+                data-aos="fade-up"
+                data-aos-duration="800"
+              >
+                Few words About us
+              </h2>
+              <p
+                class="about-us__description"
+                data-aos="fade-up"
+                data-aos-duration="800"
+              >
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+              <div
+                class="about-us__block-year"
+                data-aos="zoom-in"
+                data-aos-duration="800"
+              >
+                <p class="about-us__numbers">2015</p>
+                <p class="about-us__text">Foundation year</p>
+              </div>
+              <div
+                class="about-us__block-stores"
+                data-aos="zoom-in"
+                data-aos-duration="800"
+              >
+                <p class="about-us__numbers">23</p>
+                <p class="about-us__text">Stores</p>
+              </div>
+              <div
+                class="about-us__block-companies"
+                data-aos="zoom-in"
+                data-aos-duration="800"
+              >
+                <p class="about-us__numbers">155</p>
+                <p class="about-us__text">Companies</p>
+              </div>
+              <div
+                class="about-us__block-customer"
+                data-aos="zoom-in"
+                data-aos-duration="800"
+              >
+                <p class="about-us__numbers">10k+</p>
+                <p class="about-us__text">Clients</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+    <div
+      id="contact-us"
+      class="anchor"
+    ></div>
+    <footer class="footer page__footer footer--sticky">
+      <div class="wrapper wrapper--no-justify wrapper--flex">
+        <a
+          href="#"
+          class="footer__logo-link"
+        >
+          <img
+            src="/src/icons/Logo-white.svg"
+            alt="Bakerlab-logo"
+            class="footer__logo"
+            data-aos="fade-right"
+            data-aos-duration="800"
+            data-aos-delay="500"
+          />
+        </a>
+        <div
+          class="footer__menu-block"
+          data-aos="fade-right"
+          data-aos-duration="800"
+          data-aos-delay="500"
+        >
+          <p class="footer__menu-text">Menu</p>
+          <nav class="nav">
+            <ul class="nav__list nav__list--no-align nav__list--column">
+              <li class="nav__item">
+                <a
+                  href="#products"
+                  class="nav__link nav__link--white"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about-us"
+                  class="nav__link nav__link--white"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#blog"
+                  class="nav__link nav__link--white"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#terms-privacy"
+                  class="nav__link nav__link--white"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <h2
+          class="footer__title"
+          data-aos="fade-left"
+          data-aos-duration="800"
+          data-aos-delay="500"
+        >
+          Contact us
+        </h2>
+        <div
+          class="footer__call-us-block"
+          data-aos="fade-left"
+          data-aos-duration="800"
+          data-aos-delay="500"
+        >
+          <p class="footer__call-us-text">Call us</p>
+          <ul class="footer__number-list">
+            <li class="footer__number">
+              <a
+                class="footer__link"
+                href="tel:+(629) 555-0129"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="footer__number">
+              <a
+                class="footer__link"
+                href="tel:+(603) 555-0123"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="footer__number">
+              <a
+                class="footer__link footer__link--no-margin"
+                href="tel:+(704) 555-0127"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="footer__email-block"
+          data-aos="fade-left"
+          data-aos-duration="800"
+          data-aos-delay="500"
+        >
+          <p class="footer__email-text">Email us</p>
+          <a
+            class="footer__email"
+            href="mailto:bakerlab@example.com"
+          >
+            bakerlab@example.com
+          </a>
+        </div>
+        <div
+          class="footer__social-block"
+          data-aos="fade-right"
+          data-aos-duration="800"
+          data-aos-delay="500"
+          data-aos-offset="10"
+        >
+          <a href="https://facebook.com">
+            <img
+              src="/src/icons/Icon-facebook.svg"
+              alt="facebook-link"
+              class="footer__facebook-img"
+            />
+          </a>
+          <a href="https://instagram.com">
+            <img
+              src="/src/icons/Icon-instagram.svg"
+              alt="instagram-link"
+              class="footer__instagram-img"
+            />
+          </a>
+          <a href="https://twitter.com">
+            <img
+              src="/src/icons/Icon-twitter.svg"
+              alt="twitter-link"
+              class="footer__facebook-img"
+            />
+          </a>
+        </div>
+        <div
+          class="footer__copyright"
+          data-aos="fade-left"
+          data-aos-duration="800"
+          data-aos-delay="500"
+          data-aos-offset="10"
+        >
+          © Bakerlab 2025
+        </div>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
