--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
             </a>
             <img
               src="/src/icons/theme-icon.png"
-              alt="theme-icon"
+              alt="themeswitcher-icon"
               class="top-bar__theme-icon"
             />
           </div>
